Remove containers and fix horizontal overflow
Container padding moves the scrollbars away from the edge of the
screen

--- a/airlock/static/assets/file_browser/tree.css
+++ b/airlock/static/assets/file_browser/tree.css
@@ -95,7 +95,7 @@
   height: calc(var(--tree-line-height) + 1px);
   left: 0;
   position: absolute;
-  width: calc(100% + 1rem);
+  width: 100%;
   z-index: -2;
 }
 
